--- a/partials/tutorial.html
+++ b/partials/tutorial.html
@@ -28,7 +28,7 @@
 3. Finally add the milk. Yummy!</pre>
 
     <p><a href="http://www.wordpress.com" alt="Wordpress" target="_blank">Links</a> are very important and formatted in a Wiki-like syntax:</p>
-    <pre>Visit [Wordpress](http://www.wordpress.com)</pre>
+    <pre>[Wordpress](http://www.wordpress.com)</pre>
 
     <p>In case you just want the URL to be displayed as link text:</p>
     <pre>&lt;http://www.wordpress.com&gt;</pre>
